# ciguard

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  Dockerfile  PRD.md  PROJECT-STATE.md  README.md  SECURITY.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: _checks.yml  atheris-fuzz.yml  ci.yml  code-scanning-gate.yml  codeql.yml  dogfood.yml  release.yml
deploy/app/: manifest.yml
policies/: example_org_policies.yml
scripts/: extract_changelog_section.py  gitlab_e2e.py  release.sh  validate_corpus.py  validate_fixtures.py  validate_jenkins_corpus.py
src/ciguard/: __init__.py  discovery.py  ignore.py  main.py  repo_scan.py  rule_catalog.py
src/ciguard/analyzer/: baseline.py  engine.py  gha_rules.py  jenkins_rules.py  rules.py  sca_rules.py
src/ciguard/app/: __init__.py  checks.py  config.py  factory.py  scan_runner.py  scheduler.py  storage.py  tokens.py  webhook.py
src/ciguard/llm/: client.py  enricher.py
src/ciguard/mcp/: __init__.py  server.py
src/ciguard/models/: jenkinsfile.py  pipeline.py  workflow.py
src/ciguard/parser/: github_actions.py  gitlab_parser.py  jenkinsfile.py
src/ciguard/policy/: builtin.py  evaluator.py  loader.py  models.py
src/ciguard/reporter/: html_report.py  json_report.py  pdf_report.py  sarif_report.py
src/ciguard/scanners/: base.py  gitlab_native.py  runner.py  scorecard.py  semgrep.py
src/ciguard/web/: app.py  auth.py  scan_store.py  security_headers.py
templates/github-actions/: ciguard-scan-baseline.yml  ciguard-scan-repo.yml  ciguard-scan.yml
templates/gitlab-ci/: ciguard.gitlab-ci.yml
templates/jenkins/: Jenkinsfile.ciguard
tests/: test_app_checks.py  test_app_factory.py  test_app_scan_runner.py  test_app_scheduler.py  test_app_storage.py  test_app_tokens.py  test_app_webhook.py  test_baseline.py  test_deployment_hardening.py  test_discovery.py  test_gha_rules.py  test_github_actions_parser.py  test_ignore.py  test_jenkins_rules.py  test_jenkinsfile_parser.py  test_mcp_server.py  test_parser.py  test_policy.py  test_repo_scan.py  test_reporters.py  test_sarif_report.py  test_sca_rules.py  test_scanners.py  test_templates.py  test_web.py
tests/fixtures/: bad_pipeline.yml  complex_pipeline.yml  good_pipeline.yml  realworld_demo.gitlab-ci.yml  typical_pipeline.yml
tests/fuzz/: fuzz_parsers.py
(+22 files in other folders)
