[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ciguard"
version = "0.6.1"
description = "Static security auditor for CI/CD pipelines with baseline / delta reports, EOL-aware image checks, and GitHub Actions CVE lookups — GitLab CI, GitHub Actions, and Jenkins Pipelines (Declarative + node-style Scripted)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Jo-Jo98" }]
keywords = ["ci", "cd", "security", "sast", "gitlab", "audit", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "reportlab>=4.0",
    "anthropic>=0.34",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Jo-Jo98/ciguard"
Repository = "https://github.com/Jo-Jo98/ciguard"
Issues = "https://github.com/Jo-Jo98/ciguard/issues"

[project.scripts]
ciguard = "ciguard.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ciguard = ["reporter/templates/*.html", "web/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
# Validation scripts insert src/ onto sys.path before importing the package,
# so they intentionally violate E402 (module-level imports must be at top).
"scripts/*.py" = ["E402"]
